调整项目结构，共享 Common.cs

--- a/_GroupPinBar/_GroupPinBar/_GroupPinBar.csproj
+++ b/_GroupPinBar/_GroupPinBar/_GroupPinBar.csproj
@@ -48,13 +48,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="_share\Common.cs" />
+    <Compile Include="..\..\Common\Common.cs">
+      <Link>Common.cs</Link>
+    </Compile>
     <Compile Include="GroupPinBar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="_share\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
