--- a/_PriceRange/_PriceRange/_PriceRange.csproj
+++ b/_PriceRange/_PriceRange/_PriceRange.csproj
@@ -48,9 +48,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\Common\Common.cs">
+      <Link>Common.cs</Link>
+    </Compile>
     <Compile Include="PriceRange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="_share\Common.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
