已将除_CommonTest外的针对Common的引用从链接源码改为引用库。

--- a/_CommonTest/_CommonTest/_CommonTest.csproj
+++ b/_CommonTest/_CommonTest/_CommonTest.csproj
@@ -60,12 +60,19 @@
     <Compile Include="..\..\Common\Common.cs">
       <Link>Common.cs</Link>
     </Compile>
+    <Compile Include="..\..\Common\Logging\ILogger.cs">
+      <Link>Logging\ILogger.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Common\Logging\Logger.cs">
+      <Link>Logging\Logger.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Common\Logging\LogManager.cs">
+      <Link>Logging\LogManager.cs</Link>
+    </Compile>
     <Compile Include="CommonTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Logging\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
