增加了IndicatorBase，修改了Logger，提供共有变量，以及版本号支持。

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="IndicatorBase.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Logging\LogManager.cs" />
