--- a/_CommonTest/_CommonTest/_CommonTest.csproj
+++ b/_CommonTest/_CommonTest/_CommonTest.csproj
@@ -60,6 +60,9 @@
     <Compile Include="..\..\Common\Common.cs">
       <Link>Common.cs</Link>
     </Compile>
+    <Compile Include="..\..\Common\IndicatorBase.cs">
+      <Link>IndicatorBase.cs</Link>
+    </Compile>
     <Compile Include="..\..\Common\Logging\ILogger.cs">
       <Link>Logging\ILogger.cs</Link>
     </Compile>
