--- a/_GroupPinBar/_GroupPinBar/_GroupPinBar.csproj
+++ b/_GroupPinBar/_GroupPinBar/_GroupPinBar.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GroupBar.cs" />
     <Compile Include="GroupPinBar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
